very slight change to css to fix text align on index page

--- a/site/css/brecon.css
+++ b/site/css/brecon.css
@@ -318,7 +318,7 @@ p {
 }
 p.index {
     font-size: 20px;
-    text-align: center;
+    text-align: left;
 }
 p.msdesc {
     text-align: left;
